fix for the height and not align merchandising box

--- a/app/assets/stylesheets/components/product-catalog.sass
+++ b/app/assets/stylesheets/components/product-catalog.sass
@@ -46,6 +46,7 @@
     img
       height: 200px
       width: auto
+      overflow: hidden
 
   &__name
     p
@@ -54,6 +55,8 @@
       margin: 15px 0px
       color: #000
       text-decoration: none
+      padding: 0 10px
+      height: 60px
 
   &__price
     p
